--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,11 +1,21 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-    <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link" href="#">Basics 1</a>
-        </li>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/test" routerLinkActive="active"
+        >Basics 1</a
+      >
+    </li>
 
-        <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disable</a>
-        </li>
-    </ul>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/templateform" routerLinkActive="active"
+        >Template Driven</a
+      >
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/reactiveform" routerLinkActive="active"
+        >Reactive Forms</a
+      >
+    </li>
+  </ul>
 </nav>
