added new prettier json file, reactive and template form pages, angular screenshots

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- custom html tag binding -->
-<!-- <app-test [parentData]="title" (childEvent)="childDate = $event"></app-test>
+<!-- <app-test [parentData]="title" (childEvent)="getChildData($event)"></app-test>
 <div class="container mb-3" *ngIf="childDate">
   <h2 class="bg-primary">Child Data</h2>
   <h2>{{ childDate }}</h2>
