--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" routerLink="/test" routerLinkActive="active"
-        >Basics 1</a
+        >Angular Basics</a
       >
     </li>
 
@@ -15,6 +15,12 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/reactiveform" routerLinkActive="active"
         >Reactive Forms</a
+      >
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/reactivedemo" routerLinkActive="active"
+        >Reactive Demo Example</a
       >
     </li>
   </ul>
